--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "webpack": "^5.82.0",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.1.0"
   },
   "dependencies": {
