--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "webpack": "^5.82.0",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.1.0"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "image-webpack-loader": "^8.1.0",
     "jquery": "^3.6.4",
     "popper.js": "^1.16.1"
   }
