--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch",
-    "build": "webpack"
+    "build": "webpack",
+    "start:dev": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,8 @@
     "file-loader": "^6.2.0",
     "webpack": "^5.82.0",
     "webpack-bundle-analyzer": "^4.8.0",
-    "webpack-cli": "^5.1.0"
+    "webpack-cli": "^5.1.0",
+    "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
